2012-05-17 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/examples.xml: "Hello World" example reworked
    * rivet/packages/dio/dio.tcl: fixed SQL syntax that would break compatibility with Oracle (fixes
    reopened bug #53222)

2012-05-15 Massimo Manghi <mxmanghi@apache.org>
    * doc/hello1.rvt: add new "Hello World!" example to explain the new shorthand syntax <?= ... ?>
 
2012-05-14 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.xsl,doc/rivet.css,doc/images/[prev.png,next.png,up.png]: new stylesheet and icons for
    the page manual

2012-05-13 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/tclrivet/tclrivetparser.tcl: Tcl parser implements new shorthand echo syntax (closes
    bug #53217)
    * doc/xml/entities.xml: New manual page for package RivetEntities
    * rivet/packages/tclrivet/parse.tcl: auto_path handling improved (closes bug #52898)
    * rivet/packages/form/form.tcl: indentation converted to spaces to improve editing across different
    editors. Fixed problem with variable clash in constructor. Also removed unneeded [expr ...] in conditions
    that prevented byte compiling (Closes bug #52650)
    * doc/xml/commands.xml: improved manual entry for 'var list' (Fixes bug #52911)

2012-05-12 Massimo Manghi <mxmanghi@apache.org>
    * src/rivetParser.c: add shorthand expression <?= ... ?> for <? puts -nonewline "..." ?> (contributed 
    by Jeff Lawson, addresses #53217, tclrivetparser still to be fixed)
    * tests/shorthand.[test|rvt]: add test of shorthand notation for string output 
    * rivet/rivet-tcl/cookie.tcl: add support for HttpOnly flag (contributed by Cyril Shtumf, 
    fixes bug #53224)
    * rivet/packages/session/session-class.tcl: support for HttpOnly flag improves security and reduces
    the risk of cross-site scripting attacks (contributed by Cyril Shtumf, fixes #52224)
    * rivet/packages/dio/dio.tcl: wrong SQL syntax generated in delete method when multiple fields are