@@ -818,6 +818,54 @@ keyvalue_map(args) = 1 2 3 4 5</programlisting>
 	    </refsect1>
 	</refentry>
 
+	<refentry id="inspect">
+	    <refnamediv>
+            <refname>inspect</refname>
+            <refpurpose>Introspection command for Rivet configuration</refpurpose>
+	    </refnamediv>
+
+	    <refsynopsisdiv>
+		<cmdsynopsis>
+		    <command>inspect</command>
+		    <arg><replaceable>configuration_section</replaceable></arg>
+		    <arg><replaceable>configuration_parameter</replaceable></arg>
+		</cmdsynopsis>
+	    </refsynopsisdiv>
+	    <refsect1>
+         <title>Description</title>
+         <para>
+             <command>::rivet::inspect</command> provides introspection into the running
+             configuration of Rivet. Rivet's debug command uses it in order to gain insight
+             into the configuration, but it can be used in any script. 
+         </para>
+         <para>
+             <command>::rivet::inspect</command> can be called in three forms
+         </para>
+         <itemizedlist mark="square">
+		    	<listitem>
+					Passing one of the configuration directive definitions to 
+					<command>::rivet::inspect</command> the current value
+					read from the configuration record is returned	
+				</listitem>
+				<listitem>
+					Passing simply the switch <arg>-all</arg> a dictionary is returned
+					carrying the whole configuration 
+				</listitem> 
+            <listitem>            
+               With no argument the command returns a dictionary with 3
+               keys: server, dir, user. Each key is associated to a subdictionary 
+               where configuration lines explicitly set in the conf files
+               are stored. The configuration directives are used as keys in
+               the second level dictionary in order to retrieve a configuration
+               value. In this form the command is meant to provide a way to create 
+					the global arrays RivetServerConf, RivetDirConf and RivetUserConf 
+					which are internally used by ::rivet::debug
+				</listitem>>
+         </itemizedlist>
+	    </refsect1>
+	</refentry>
+
+
 	<!-- refentry id="lassign">
 	    <refnamediv>
 		<refname>lassign</refname>
@@ -1248,10 +1296,10 @@ bxxb ccxxxxcc</programlisting>
 			</term>
 			<listitem>
 			    <para>
-				When given the name of a file upload
+				    When given the name of a file upload
 	    			<option><replaceable>uploadname</replaceable></option>,
-				returns a Tcl channel that can be used to access the
-				uploaded file.
+				    returns a Tcl channel that can be used to access the
+				    uploaded file.
 			    </para>
 			</listitem>
 		    </varlistentry>
